customized scrollbar, padded bottom of footer, fixed repeating background

--- a/src/components/layout/Footer.module.css
+++ b/src/components/layout/Footer.module.css
@@ -3,6 +3,7 @@
   font-size: 1rem;
   color: #fefcff;
   text-align: center;
+  padding-bottom: 5rem;
 }
 
 .footer a {
