--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -2,6 +2,7 @@
   margin: 3rem auto;
   width: 90%;
   max-width: 40rem;
+  padding-bottom: 5rem;
 }
 
 .text {
